`SuspiciousExprTreeNode クラスに printChildren メソッドを追加し、子ノードの構造を整然と出力可能に改善`